# arc

./: .gitignore  .gitlab-ci.yml  .svnignore  AUTHORS  CLEANUP-README  ChangeLog  ChangeLog.newconfig  FEATURES  FEATURES_TO_TEST  Jenkinsfile  Makefile.am  NEWS  NOTICE  README  README-BRANCH  README-CLEANUP  README.OIDC  README.OSX  README.Solaris  README.WIN32  VERSION  arc-uncrustify.cfg  arc.SlackBuild  arc.nsi  arc.spec.in  arcbase.pc.in  autoclean.sh  autogen.sh  commit.txt  configure.ac  mingw-nordugrid-arc.spec.in  mingw32-arc.spec  mingw32-arc.spec.in  mingw32-nordugrid-arc.spec.in  nordugrid-arc.SlackBuild  nordugrid-arc.spec.in
doc/: Doxyfile  Doxyfile.api  Doxyfile.chain  Doxyfile.services  Makefile.am  README  configure.ac  grid.bib  nordugrid-arc-doc.spec.in
doc/a-rex/: Makefile  arex_tech_doc.lyx  arex_tech_doc.tex  grid.bib  ng-logo.eps  pic4.eps
doc/backend_interface/: Backends-arc1.tex  Backends.tex  Makefile  grid.bib
doc/client/: ExecutionTargetMapping.html  GUI_LAP_plans.tex  JobInnerReprensentation.ods  JobInnerRepresentation.ods  UnicoreSupport.tex  arc-ws-clients.tex  arcdata.tex  arcjob.tex  arex_client.xml  broker-mapping.ods  client_technical.tex  gin-profile-draft.doc  gin-profile-example.xml  gin-profile-jsdl.xsd  grid.bib  resubmit_and_migrate_plans.tex  ws_client_lib.tex
doc/dmc/: Makefile  dmc.tex
doc/glite_gateway/: Makefile  glite_gateway.tex  grid.bib
doc/hed/: ARCHED_article.tex  HED_Internals.pptx  MCC_Dummy.cpp  MCC_Dummy.h  Makefile  counter.tex  grid.bib  lang_binding_limits  mcc2.txt  mcc3.txt  mcc4.txt
doc/infosys/: ExecutionTargetMapping.ods  InfoSysSketches.ppt  JobMapping.ods  Makefile.am  arc1_se.xml  arc1_storage_gateway.xml  arc1_storage_system.xml  computing_re.xml  desktop_glue.xml  hom_cluster_glue.xml  inhom_cluster_glue.xml  nordugrid_domain.xml  security_model.txt  services_glue.xml  target.xml
doc/internal_notes/: README
doc/jura/: Makefile  jura-tech-doc.tex
doc/manuals/: Makefile.am  README
doc/release_notes/: Makefile.am  release_notes_Nox_1.2.0.txt  release_notes_Nox_1_0_0.txt  release_notes_Nox_1_1_0.txt  release_notes_Nox_1_2_0.txt
doc/sec/: KnowARC_D1.6-2.doc  ManualofSecurityFramework.odt  ManualofSecurityFramework.tex  MessageAttributeSurvey.ods  README4policy_matchmaking  Sec_paper.odt  Sec_paper.tex  Sec_paper_IEEE_format.doc  SecurityFrameworkofARC1.doc  SecurityFrameworkofARC1.odt  SecurityFrameworkofARC1.tex  auth.txt  implementation.txt  secattr.txt  security_infrastructure.lyx  security_infrastructure.tex  security_infrastructure.txt
doc/service_interfaces/: D1.2-1-draft.odt
doc/storage_manager/: T2-1-stm-proposal.odt  T2.1-design-v0.1.2.doc  T2.1-design-v0.1.2.pages.tar  t2.1-proposal-070615.rtf
doc/storage_system/: Knowarc_D2.1-1_08.doc  Makefile  arc-storage-design.doc  arc-storage-design.pages.tar  arc-storage-documentation.tex  arc-storage-downloading.graffle  arc-storage-listing.graffle  arc-storage-manual.tex  arc-storage-namespace.graffle  arc-storage-removing.graffle  arc-storage-services.graffle  arc-storage-uploading.graffle  arc1-storage-documentation.tex  arc1-storage-namespace.graffle  arc1-storage-uploading.graffle  prototype_arcfs_howto.txt  prototype_installation_howto.txt  shepherd_apache_backend_howto.txt  storage_security.txt  trackchanges.sty
doc/tech_doc/: Makefile.am  README
doc/tutorials/: Makefile.am
doc/usagereporter/: aur-tech-draft.tex  usagereporting.dia
doc/ws-programming-tutorial/: Makefile.am  README  autogen.sh
doc/ws-quick-guide/: Makefile  ws-quick-guide.bib  ws-quick-guide.tex
include/: Makefile.am  README  convert
include/arc/: ArcConfig.h  ArcConfigFile.h  ArcConfigIni.h  ArcLocation.h  ArcRegex.h  ArcVersion.h  Base64.h  BasicDT.h  ByteArray.h  CheckSum.h  Counter.h  DBInterface.h  DateTime.h  Endpoint.h  FileAccess.h  FileLock.h  FileUtils.h  GUID.h  HostnameResolver.h  IString.h  IniConfig.h  IntraProcessCounter.h  JSON.h  JobPerfLog.h  Logger.h  MysqlWrapper.h  OptionParser.h  Profile.h  Regex.h  Run.h  StringConv.h  Thread.h  URL.h  User.h  UserConfig.h  Utils.h  Watchdog.h  XMLNode.h  win32.h
intl/: .svnignore  Arc.ru.po  Arc.sv.po  Makefile.am  template.po
java/: .svnignore  ComputingServiceTypeConsumer.java  EndpointConsumer.java  JNI.h  JobConsumer.java  Makefile.am  README  arc_init.cpp  arc_jni.h
java/examples/: BasicJobSubmission.java  DTRGenerator.java  Makefile.am  ResourceDiscovery.java
java/test/: Makefile.am  MappingOf_time_t_and_uint32_t_CTypesToJavaRegressionTest.java  ReturnLocalReferenceRGTest.java  compile.sh  run.sh  strip_test_file_name_and_run_junit.in  test.java
python/: .svnignore  Doxyfile.api  Doxyfile.api.in  Makefile.am  README  __init__.py  arc_init.cpp  common.mk  doxy2swig.py  swigmodulesinit_wrap.cpp
python/altpython/: Makefile.am
python/examples/: Makefile.am  basic_job_submission.py  copy_file.py  dtr_generator.py  job_filtering.py  job_selector.py  job_status.py  job_submission.py  joblist_retrieval.py  partial_copy.py  retreiving_results.py  retrieving_results.py  service_discovery.py
python/test/: ComputingServiceRetrieverTest.py  DeletingSwigIteratorObtainedFromPublicListRegTest.py  EndpointContainerTest.py  EndpointTest.py  JobSupervisorTest.py  Makefile.am  MappingOf_time_t_and_uint32_t_CTypesToPythonRegressionTest.py  RegistryEndpointTest.py  ServiceEndpointContainerTest.py  ServiceEndpointRetrieverPluginTest.py  ServiceEndpointRetrieverTest.py  ServiceEndpointTest.py  SwigPyIteratorSegFaultRegTest.py  TargetInformationRetrieverTest.py  UsingTheNextMethodOnASwigIteratorRegTest.py  common.mk  run.sh  soap.xml  soap2.xml  test.py  test2.py  tests.mk  testutils.py
src/: Makefile.am  README  Test.cpp
src/arclib/: Credential.cpp  Credential.h  Makefile.am  Proxycertinfo.cpp  Proxycertinfo.h  README  VOMSAttribute.c  VOMSAttribute.cpp  VOMSAttribute.h  cert_util.cpp  cert_util.h  credential.cpp  credential.h  listfunc.c  test.cpp  testcertinfo.cpp  testproxy2proxy.cpp  voms_util.cpp  voms_util.h
src/clients/: Makefile.am  README  client.bash_completion  client.conf  (+1 more)
(+5378 files in other folders)
